# haste-lang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Scanner.cpp.E6E2F0D89BB13EA8.idx  Scanner.hpp.42073B15349BFAA5.idx  macros.hpp.096840473EB8323E.idx  main.cpp.D689849A73D884C7.idx  tokens.hpp.E1901CAF59E90346.idx
examples/: hello.haste  tags.haste  variables.haste
include/: Parser.hpp  Scanner.hpp  macros.hpp  tokens.hpp
include/AST/: Expressions.hpp  Statments.hpp
src/: Parser.cpp  Scanner.cpp
test/: main.cpp
